# agent-commit

./: README.md  pyproject.toml
plans/: agent-commit.md
src/agent_commit/: __init__.py  core.py  mcp_server.py
tests/: test_agent_commit.py
tests/tools/: test_agent_commit_tool.py
tools/: agent_commit_tool.py
